# src/routes/userRoute.js
@@ -3,6 +3,7 @@ import {
   registerUsers,
   loginUser,
   searchUser,
+  sendNotify,
 } from "../controllers/userController.js";
 
 const router = express.Router();
@@ -13,5 +14,6 @@ router.get("/", (_req, res) => {
 router.post("/register", registerUsers);
 router.post("/login", loginUser);
 router.get("/searchUser", searchUser);
+router.get("/notifications", sendNotify);
 
 export default router;
