# swagger-output.json
@@ -122,6 +122,19 @@
         }
       }
     },
+    "/users/notifications": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/documents/": {
       "get": {
         "description": "",
@@ -180,6 +193,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "token",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -207,6 +225,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
